# parser_linearization

./: README.md  extra_action.sh  parser_linearization.sh
extractDepAction/: CMakeLists.txt  extra_action.sh
extractDepAction/src/: Action.h  CMakeLists.txt  Instance.h  State.h  main.cpp
maltparser-1.9.1/: build.xml  parser_linearization.sh  pproj.mco
maltparser-1.9.1/appdata/dataformat/: conllu.xml
maltparser-1.9.1/appdata/features/liblinear/conllu/: CovingtonNonProjective.xml  CovingtonProjective.xml  NivreStandard.xml  StackIncremental.xml  StackProjective.xml  StackSwap.xml
maltparser-1.9.1/appdata/features/libsvm/conllu/: CovingtonNonProjective.xml  CovingtonProjective.xml  NivreStandard.xml  StackIncremental.xml  StackProjective.xml  StackSwap.xml
maltparser-1.9.1/docs/: changes.html  conll.html  contact.html  download.html  faq.html  index.html
maltparser-1.9.1/examples/: optionexample.xml
maltparser-1.9.1/examples/data/swemalt-mini/: swedish-swap.xml
maltparser-1.9.1/src/org/maltparser/: MaltConsoleEngine.java
maltparser-1.9.1/src/org/maltparser/concurrent/graph/: ConcurrentGraphException.java
maltparser-1.9.1/src/org/maltparser/concurrent/test/: ExperimentException.java
maltparser-1.9.1/src/org/maltparser/ml/: LearningMethod.java
maltparser-1.9.1/src/org/maltparser/parser/: BatchTrainer.java  DependencyParserConfig.java  DeterministicParser.java  Parser.java  ParserConfiguration.java  ParserState.java  ParsingAlgorithm.java  SingleMalt.java  SingleMaltChartItem.java  Trainer.java  TransitionSystem.java
(+202 files in other folders)
